--- a/css/utility.scss
+++ b/css/utility.scss
@@ -18,6 +18,11 @@
     margin: 20px 0;
 }
 
+.spacer-md {
+    display: block;
+    height: 40px;
+}
+
 .d-flex {
     display: flex;
 }
